[package]
edition = "2018"
name = "thrustcurve-api"
version = "0.1.0"
[dependencies]
hyper-tls = "*"
paste = "1.0"
serde_json = "^1.0"
thiserror = "*"

[dependencies.hyper]
features = ["client", "http1", "http2", "tcp"]
version = "^0.14"

[dependencies.serde]
features = ["derive"]
version = "^1.0"

[dev-dependencies]
[dev-dependencies.tokio]
features = ["full"]
version = "1.11"
